--- a/theme/about.html
+++ b/theme/about.html
@@ -35,7 +35,7 @@
       <section data-scroll-section="1" class="section-3">
         <div class="container is--sticky bg">
           <div class="div-block-43">
-            <p>{{ texts.-5286fc08 }}</p>
+            <p class="paragraph-2">{{ texts.-5286fc08 }}</p>
           </div>
         </div>
       </section>
