--- a/theme/contact.html
+++ b/theme/contact.html
@@ -39,11 +39,11 @@
           <section id="contact-form" class="contact-form topline wf-section">
             <div class="container-11 w-container">
               <p>{{ texts.-5cde5975 }}</p>
-              <div id="formInstructions" class="small-text"><em>{{ texts.-2c493e9e }}</em></div>
+              <div id="formInstructions" class="small-text"><em class="italic-text">{{ texts.-2c493e9e }}</em></div>
               <div class="w-form">
                 <form id="wf-form-Contact-Form" name="wf-form-Contact-Form" data-name="contact" method="post" data-netlify="true" data-ajax="true" data-content-type="application/x-www-form-urlencoded">
                   <div class="contact-form-grid">
-                    <div id="w-node-e4c7fdf2-18d8-8f64-1670-f77f9d41e95e-dcad72bd"><label for="First-Name-2" id="contact-first-name">{{ texts.-1e749b }}</label><input type="text" class="input w-input" maxlength="256" name="First-Name-2" data-name="First Name 2" id="First-Name-2" required=""></div>
+                    <div id="w-node-e4c7fdf2-18d8-8f64-1670-f77f9d41e95e-dcad72bd"><label for="First-Name-2" id="contact-first-name" class="field-label">{{ texts.-1e749b }}</label><input type="text" class="input w-input" maxlength="256" name="First-Name-2" data-name="First Name 2" id="First-Name-2" required=""></div>
                     <div id="w-node-e4c7fdf2-18d8-8f64-1670-f77f9d41e962-dcad72bd"><label for="Last-Name-2" id="contact-last-name" class="field-label">{{ texts.-317a6f81 }}</label><input type="text" class="input w-input" maxlength="256" name="Last-Name-2" data-name="Last Name 2" id="Last-Name-2" required=""></div>
                     <div id="w-node-e4c7fdf2-18d8-8f64-1670-f77f9d41e966-dcad72bd"><label for="Email-2" id="contact-email" class="field-label">{{ texts.1967086 }}</label><input type="email" class="input w-input" maxlength="256" name="Email-2" data-name="Email 2" id="Email-2" required=""></div>
                     <div id="w-node-e4c7fdf2-18d8-8f64-1670-f77f9d41e96a-dcad72bd"><label for="Contact-Phone-Number-2" id="contact-phone" class="field-label">{{ texts.-1f5cfda5 }}</label><input type="tel" class="input w-input" maxlength="256" name="Contact-Phone-Number-2" data-name="Contact Phone Number 2" id="Contact-Phone-Number-2"></div>
