--- a/theme/style-guide.html
+++ b/theme/style-guide.html
@@ -27,22 +27,22 @@
         <p class="style-guide-subhead">{{ texts.-1c35cfad }}</p>
         <div class="w-row">
           <div class="type-column-1 w-col w-col-6">
-            <h1>{{ texts.15301c6d }}</h1>
+            <h1 class="heading-51">{{ texts.15301c6d }}</h1>
             <div class="style-guide-divider"></div>
             <div class="style-guide-label">{{ texts.8e9 }}</div>
-            <h2>{{ texts.-734fd222 }}</h2>
+            <h2 class="heading-54">{{ texts.-734fd222 }}</h2>
             <div class="style-guide-divider"></div>
             <div class="style-guide-label">{{ texts.8ea }}</div>
-            <h3>{{ texts.-734fd222 }}</h3>
+            <h3 class="heading-52">{{ texts.-734fd222 }}</h3>
             <div class="style-guide-divider"></div>
             <div class="style-guide-label">{{ texts.8eb }}</div>
-            <h4>{{ texts.-734fd222 }}</h4>
+            <h4 class="heading-53">{{ texts.-734fd222 }}</h4>
             <div class="style-guide-divider"></div>
             <div class="style-guide-label">{{ texts.8ec }}</div>
             <h5 class="heading-42">{{ texts.-734fd222 }}</h5>
             <div class="style-guide-divider"></div>
             <div class="style-guide-label">{{ texts.8ed }}</div>
-            <h6>{{ texts.-734fd222 }}</h6>
+            <h6 class="heading-55">{{ texts.-734fd222 }}</h6>
             <div class="style-guide-divider"></div>
             <div class="style-guide-label">{{ texts.8ee }}</div>
           </div>
