--- a/theme/[category].html
+++ b/theme/[category].html
@@ -25,15 +25,11 @@
       <section data-scroll-section="1" class="section-3 is--hero">
         <div class="container page">{%- image images.5cde9e95.url, images.5cde9e95.alt, '[]', 'loading="lazy" width="33" class="invert"' -%}
           <h1 class="page-title">{{ title }}</h1>
-        </div>
-      </section>
-      <section data-scroll-section="1" class="section-3">
-        <div class="container is--sticky top">
           {%- assign collection = collections.category -%}<div class="collection-list-wrapper-6 w-dyn-list">
-            {%- unless collection.length == 0 -%}<div style="background-color:rgb(250,207,186)" role="list" class="collection-list-6 w-dyn-items w-row">
+            {%- unless collection.length == 0 -%}<div role="list" class="collection-list-6 w-dyn-items w-row">
               {%- for item in collection -%}<div role="listitem" class="collection-item-7 w-dyn-item w-col w-col-2">
                 <a href="{{ item.url }}" class="category-nav w-inline-block">
-                  <h6 data-w-id="ba2dcb39-1be9-6ef6-d7a3-b161fda35fd8" class="heading-47">{{ item.data.title }}</h6>
+                  <h6 class="heading-47">{{ item.data.title }}</h6>
                 </a>
               </div>{%- endfor -%}
             </div>{%- endunless -%}
@@ -41,12 +37,17 @@
               <div>{{ texts.3d503d2b }}</div>
             </div>{%- endif -%}
           </div>
+        </div>
+      </section>
+      <section data-scroll-section="1" class="section-3">
+        <div class="container is--sticky top">
           {%- assign collection = collections.project | filter: "f_category,eq,DYN_CONTEXT", "ALL", page.inputPath -%}<div class="collection-list-wrapper-5 w-dyn-list">
             {%- unless collection.length == 0 -%}<div role="list" class="collection-list-5 w-dyn-items w-row">
               {%- for item in collection -%}<div role="listitem" class="collectionitem w-dyn-item w-col w-col-6">
                 <a href="{{ item.url }}" class="link-block-13 w-inline-block">
                   <h2 class="heading-39">{{ item.data.title }}</h2>
-                </a>{%- image item.data.f_main-project-image.url, item.data.f_main-project-image.alt, '[{"max":479,"size":"90vw"},{"max":767,"size":"95vw"},{"max":991,"size":"47vw"},{"max":10000,"size":"40vw"}]', 'loading="lazy" width="597" class="image-12"' -%}
+                </a>{%- image item.data.f_main-project-image.url, item.data.f_main-project-image.alt, '[{"max":10000,"size":"100vw"}]', 'loading="lazy" width="597" class="image-12"' -%}
+                <div class="text-block-5">{{ item.data.f_project-summary }}</div>
               </div>{%- endfor -%}
             </div>{%- endunless -%}
             {%- if collection.length == 0 -%}<div class="w-dyn-empty">
