Files committed from Adapter on Thu Jul 29 2021

--- a/theme/index.html
+++ b/theme/index.html
@@ -24,7 +24,7 @@
   {%- include "partials/meg" -%}
   <main class="main">
     <div class="locomotive-scroll">
-      <section data-scroll-section="1" class="section-3 is--hero">
+      <section class="section-3 is--hero">
         <div class="container is--hero">
           <div class="div-block-24">{%- image images.-3477bde9.url, images.-3477bde9.alt, '[]', 'loading="lazy" width="889" class="image-11"' -%}
             <h2>{{ texts.41408d4e }}</h2>
